Добавляет режиссеров